--- a/Website/index.html
+++ b/Website/index.html
@@ -5,6 +5,6 @@
 <body style="overflow:hidden; margin:0; text-align:center; background-color:slategray; color:white">
   <h1>Welcome to Varsha's website</h1>
   <p>Now hosted on Amazon S3!</p>
-  <img src="https://myfirstbucket-varsha.s3.amazonaws.com/S3WebHosting-Architecture.png" style="height:80vh; max-width:80%; object-fit: contain;">
+  <img src="https://myfirstbucket-varsha.s3.amazonaws.com/S3WebHosting.png" style="height:80vh; max-width:80%; object-fit: contain;">
 </body>
 </html>
